<resources>
    <string name="app_name">Mova</string>


    <!--    Auth-->
    <string name="login_your_account">Login to Your Account</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_desc">Select which contact details should we use to reset your password</string>
    <string name="continue_with">or continue with</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="via_sms">via SMS:</string>
    <string name="via_email">via Email:</string>
    <string name="continue_button">Continue</string>
    <string name="verify">Verify</string>
    <string name="code_sent_to">Code has been send to %1$s</string>
    <string name="resend_code_in">Resend code in %1$s s</string>
    <string name="crete_new_password">crete New Password</string>
    <string name="congratulation">Congratulation!</string>
    <string name="congratulation_desc">your account is ready to use. You will be redirect to home screen in few seconds.</string>

    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="upComing_movies">UpComing Movies</string>
    <string name="genre_name">Action</string>
    <string name="copy_success"> Name Copied Successfully</string>
    <string name="go_back">Back</string>
    <string name="see_all">see all</string>
    <string name="title_genre">Genres</string>
    <string name="title_category">Category</string>
    <string name="title_movieDetails">movie Details</string>
    <string name="movie_image_error">movie image unavailable</string>
    <string name="enable_connection">enable connection</string>
    <string name="no_data_found">The keyword you entered could not be found,\n Please try another keyword</string>

    <!--Navigation-->
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>


    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="genres">Genres</string>
    <string name="regions">Regions</string>
    <string name="sort">Sort</string>
    <string name="sort_filter"><![CDATA[Sort & Filter]]></string>
    <string name="year">Year</string>

    <string name="search">enter keywork</string>
    <string name="search_filter">search filter</string>
    <string name="allTimes">All times</string>


    <string name="popularity"> popularity </string>
    <string name="release_date">release date </string>
    <string name="revenue">revenue </string>
    <string name="original_title">original title </string>
    <string name="vote_average">vote average </string>
    <string name="vote_count">vote count </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- <string-array name="sortBy_values">
         <item> popularity Ascending</item>
         <item> popularity Descending</item>
         <item> release date Ascending</item>
         <item> release date Descending</item>
         <item> revenue Ascending</item>
         <item> revenue Descending</item>
         <item> primary release date Ascending</item>
         <item> primary release date Descending</item>
         <item> original title Ascending</item>
         <item> original title Descending</item>
         <item> vote average Ascending</item>
         <item> vote average Descending</item>
         <item> vote count Ascending</item>
         <item> vote count Descending</item>
     </string-array>

     <string-array name="sortBy_entries">
         <item>popularityAsc</item>
         <item>popularity.desc</item>
         <item>release_date.asc</item>
         <item>release_date.desc</item>
         <item>revenue.asc</item>
         <item>revenue.desc</item>
         <item>primary_release_date.asc</item>
         <item>primary_release_date.desc</item>
         <item>original_title.asc</item>
         <item>original_title.desc</item>
         <item>vote_average.asc</item>
         <item>vote_average.desc</item>
         <item>vote_count.asc</item>
         <item>vote_count.desc</item>
     </string-array>-->


    <!--Dummy Data-->
    <string name="movie_image">Movie Image</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_rate">9.8</string>
    <string name="dummy_name">What is Lorem Ipsum?</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley
        of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
        electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Lettres
        sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker
        including versions of Lorem Ipsum.</string>
    <string name="dummy_email">abdelrahman.raafaat@gmail.com</string>
    <string name="dummy_phone_number">01151883341</string>

</resources>