<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.view.VerifyCodeFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/forgot_password"
        android:textColor="?colorOnSecondary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/backImageView"
        app:layout_constraintStart_toEndOf="@+id/backImageView"
        app:layout_constraintTop_toTopOf="@+id/backImageView" />

    <TextView
        android:id="@+id/codeSentTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/code_sent_to"
        android:textColor="?colorOnSecondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/codeViewOTP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.kevinschildhorn.otpview.OTPView
        android:id="@+id/codeViewOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:otp_backgroundImage="@drawable/bg_un_highlighted_otp"
        app:otp_cursorColor="@color/white"
        app:otp_highlightedBackgroundImage="@drawable/bg_highlighted_otp"
        app:otp_itemCount="4"
        app:otp_itemHeight="55dp"
        app:otp_itemWidth="55dp"
        app:otp_marginBetween="40dp"
        app:otp_showCursor="true"
        app:otp_textColor="?colorOnSecondary" />

    <TextView
        android:id="@+id/resendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/resend_code_in"
        android:textColor="?colorOnSecondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeViewOTP" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verifyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_continue"
        android:paddingVertical="17dp"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="?colorOnPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>