<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10sp"
    android:layout_marginVertical="10sp">

    <androidx.cardview.widget.CardView
        android:id="@+id/movieCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/moviePoster"
                android:layout_width="200sp"
                android:layout_height="270sp"
                android:background="@color/teal_200"
                android:contentDescription="@string/movie_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/movieRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@drawable/rate_background"
                android:gravity="center"
                android:paddingHorizontal="15sp"
                android:paddingVertical="7sp"
                android:text="@string/movie_rate"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/movie_name"
        android:textColor="?colorOnSecondary"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="@+id/movieCard"
        app:layout_constraintStart_toStartOf="@+id/movieCard"
        app:layout_constraintTop_toBottomOf="@+id/movieCard" />

</androidx.constraintlayout.widget.ConstraintLayout>