<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.view.CreateNewPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/creteNewPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/crete_new_password"
            android:textColor="?colorOnSecondary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/backImageView"
            app:layout_constraintStart_toEndOf="@+id/backImageView"
            app:layout_constraintTop_toTopOf="@+id/backImageView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/creteNewPasswordImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_create_new_password"
            app:layout_constraintTop_toBottomOf="@+id/creteNewPasswordTitle" />

        <TextView
            android:id="@+id/creteYourNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="45dp"
            android:text="@string/crete_new_password"
            android:textColor="?colorOnSecondary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creteNewPasswordImage" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordRegister"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="25dp"
            android:hint="@string/password"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:layout_constraintTop_toBottomOf="@id/creteYourNewPassword"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_email_black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordRegister"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="25dp"
            android:hint="@string/confirm_password"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:layout_constraintTop_toBottomOf="@id/passwordRegister"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_email_black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordRegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/remember_me"
            android:textColor="?colorOnSecondary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordRegister" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_continue"
            android:paddingVertical="17dp"
            android:text="@string/continue_button"
            android:textAllCaps="false"
            android:textColor="?colorOnPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/passwordRegister"
            app:layout_constraintStart_toStartOf="@+id/passwordRegister"
            app:layout_constraintTop_toBottomOf="@+id/rememberMeCheckBox" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>